EXTRA_DIST = \
	00_basic/apache.conf 00_basic/test.yml \
	01_serverwide_priorities/apache.conf 01_serverwide_priorities/test.yml \
	02_cache_in_vhost/apache.conf 02_cache_in_vhost/fail.server 02_cache_in_vhost/test.yml \
	03_cachetimeout_in_vhost/apache.conf 03_cachetimeout_in_vhost/test.yml \
	04_basic_nosni/apache.conf 04_basic_nosni/test.yml \
	05_mismatched-priorities/apache.conf 05_mismatched-priorities/test.yml \
	06_verify_sni_a/apache.conf 06_verify_sni_a/test.yml \
	07_verify_sni_b/apache.conf 07_verify_sni_b/test.yml \
	08_verify_no_sni_fallback_to_first_vhost/apache.conf 08_verify_no_sni_fallback_to_first_vhost/test.yml \
	09_verify_no_sni_fails_with_wrong_order/apache.conf 09_verify_no_sni_fails_with_wrong_order/test.yml \
	10_basic_client_verification/apache.conf 10_basic_client_verification/test.yml \
	11_basic_client_verification_fail/apache.conf 11_basic_client_verification_fail/test.yml \
	12_cgi_variables/apache.conf 12_cgi_variables/test.yml \
	13_cgi_variables_no_client_cert/apache.conf 13_cgi_variables_no_client_cert/test.yml \
	14_resume_session/apache.conf 14_resume_session/hooks.py 14_resume_session/test.yml \
	15_basic_msva/apache.conf 15_basic_msva/hooks.py 15_basic_msva/test.yml \
	16_view-status/apache.conf 16_view-status/test.yml \
	17_cgi_vars_large_cert/apache.conf 17_cgi_vars_large_cert/test.yml \
	18_client_verification_wrong_cert/apache.conf 18_client_verification_wrong_cert/test.yml \
	19_TLS_reverse_proxy/apache.conf 19_TLS_reverse_proxy/backend.conf 19_TLS_reverse_proxy/test.yml \
	20_TLS_reverse_proxy_client_auth/apache.conf 20_TLS_reverse_proxy_client_auth/backend.conf 20_TLS_reverse_proxy_client_auth/test.yml \
	21_TLS_reverse_proxy_wrong_cert/apache.conf 21_TLS_reverse_proxy_wrong_cert/backend.conf 21_TLS_reverse_proxy_wrong_cert/test.yml \
	22_TLS_reverse_proxy_crl_revoke/apache.conf 22_TLS_reverse_proxy_crl_revoke/backend.conf 22_TLS_reverse_proxy_crl_revoke/test.yml \
	23_TLS_reverse_proxy_mismatched_priorities/apache.conf 23_TLS_reverse_proxy_mismatched_priorities/backend.conf 23_TLS_reverse_proxy_mismatched_priorities/test.yml \
	24_pkcs11_cert/apache.conf 24_pkcs11_cert/hooks.py 24_pkcs11_cert/test.yml \
	25_Disable_TLS_1.0/apache.conf 25_Disable_TLS_1.0/test.yml \
	26_redirect_HTTP_to_HTTPS/apache.conf 26_redirect_HTTP_to_HTTPS/test.yml \
	27_OCSP_server/apache.conf 27_OCSP_server/hooks.py 27_OCSP_server/ocsp.conf 27_OCSP_server/test.yml \
	28_HTTP2_support/apache.conf 28_HTTP2_support/hooks.py \
	29_force_handshake_vhost/apache.conf 29_force_handshake_vhost/test.yml \
	30_ip_based_vhosts/apache.conf 30_ip_based_vhosts/hooks.py 30_ip_based_vhosts/test.yml \
	31_vhost_SNI_serveralias_match/apache.conf 31_vhost_SNI_serveralias_match/test.yml \
	32_vhost_SNI_serveralias_mismatch/apache.conf 32_vhost_SNI_serveralias_mismatch/test.yml \
	33_vhost_SNI_serveralias_missinghost/apache.conf 33_vhost_SNI_serveralias_missinghost/test.yml \
	34_TLS_reverse_proxy_h2/apache.conf 34_TLS_reverse_proxy_h2/hooks.py 34_TLS_reverse_proxy_h2/backend.conf 34_TLS_reverse_proxy_h2/test.yml \
	35_client_reauth/apache.conf 35_client_reauth/test.yml \
	36_OCSP_server_nonce/apache.conf 36_OCSP_server_nonce/hooks.py 36_OCSP_server_nonce/ocsp.conf 36_OCSP_server_nonce/test.yml \
	37_TLS_reverse_proxy_resume_session/apache.conf 37_TLS_reverse_proxy_resume_session/backend.conf 37_TLS_reverse_proxy_resume_session/hooks.py 37_TLS_reverse_proxy_resume_session/test.yml
