EXTRA_DIST = \
	00_basic/apache.conf 00_basic/test.yaml \
	01_priorities_config/apache.conf 01_priorities_config/test.yaml \
	02_cache_in_vhost/apache.conf 02_cache_in_vhost/fail.server 02_cache_in_vhost/test.yaml \
	03_cachetimeout_in_vhost/apache.conf 03_cachetimeout_in_vhost/test.yaml \
	04_name_based_vhosts/apache.conf 04_name_based_vhosts/test.yaml \
	05_client_handshake_error/apache.conf 05_client_handshake_error/test.yaml \
	10_client_verification/apache.conf 10_client_verification/test.yaml \
	12_cgi_variables/apache.conf 12_cgi_variables/test.yaml \
	14_resume_session/apache.conf 14_resume_session/hooks.py 14_resume_session/test.yaml \
	15_basic_msva/apache.conf 15_basic_msva/hooks.py 15_basic_msva/test.yaml \
	16_view-status/apache.conf 16_view-status/test.yaml \
	17_cgi_vars_large_cert/apache.conf 17_cgi_vars_large_cert/test.yaml \
	19_TLS_reverse_proxy/apache.conf 19_TLS_reverse_proxy/backend.conf 19_TLS_reverse_proxy/test.yaml \
	20_TLS_reverse_proxy_client_auth/apache.conf 20_TLS_reverse_proxy_client_auth/backend.conf 20_TLS_reverse_proxy_client_auth/test.yaml \
	21_TLS_reverse_proxy_wrong_cert/apache.conf 21_TLS_reverse_proxy_wrong_cert/backend.conf 21_TLS_reverse_proxy_wrong_cert/test.yaml \
	22_TLS_reverse_proxy_crl_revoke/apache.conf 22_TLS_reverse_proxy_crl_revoke/backend.conf 22_TLS_reverse_proxy_crl_revoke/test.yaml \
	23_TLS_reverse_proxy_mismatched_priorities/apache.conf 23_TLS_reverse_proxy_mismatched_priorities/backend.conf 23_TLS_reverse_proxy_mismatched_priorities/test.yaml \
	24_pkcs11_cert/apache.conf 24_pkcs11_cert/hooks.py 24_pkcs11_cert/test.yaml \
	26_redirect_HTTP_to_HTTPS/apache.conf 26_redirect_HTTP_to_HTTPS/test.yaml \
	27_OCSP_server/apache.conf 27_OCSP_server/hooks.py 27_OCSP_server/ocsp.conf 27_OCSP_server/test.yaml \
	28_HTTP2_support/apache.conf 28_HTTP2_support/hooks.py \
	30_ip_based_vhosts/apache.conf 30_ip_based_vhosts/hooks.py 30_ip_based_vhosts/test.yaml \
	31_vhost_SNI_serveralias_match/apache.conf 31_vhost_SNI_serveralias_match/test.yaml \
	32_vhost_SNI_serveralias_mismatch/apache.conf 32_vhost_SNI_serveralias_mismatch/test.yaml \
	33_vhost_SNI_serveralias_missinghost/apache.conf 33_vhost_SNI_serveralias_missinghost/test.yaml \
	34_TLS_reverse_proxy_h2/apache.conf 34_TLS_reverse_proxy_h2/hooks.py 34_TLS_reverse_proxy_h2/backend.conf 34_TLS_reverse_proxy_h2/test.yaml \
	35_client_reauth/apache.conf 35_client_reauth/test.yaml \
	36_OCSP_server_nonce/apache.conf 36_OCSP_server_nonce/hooks.py 36_OCSP_server_nonce/ocsp.conf 36_OCSP_server_nonce/test.yaml \
	37_TLS_reverse_proxy_resume_session/apache.conf 37_TLS_reverse_proxy_resume_session/backend.conf 37_TLS_reverse_proxy_resume_session/hooks.py 37_TLS_reverse_proxy_resume_session/test.yaml
